# ece361f24_homework5_release_r1_0

./: BST_ADT_results.txt  CMakeLists.txt  makefile
starters/iom361_r2/: iom361_r2.c  iom361_r2.h  test_iom361_r2.c  test_iom361_r2_test_results.txt
starters/karumanchi_bst/: BST_ADT.c  BST_ADT.h  BinarySearchTree.c  BinarySearchTree.h  BinaryTree.c  BinaryTree.h
starters/random_float_generator/: float_rndm.c  float_rndm.h  test_float_rndm.c  test_float_rndm_test_results.txt
starters/roy_files/: README.txt  tempHumidtree.h  test_tempHumidtree_results.txt  test_tempHumidtree_results_10days.txt
test results/: hw5_app_test_results.txt
